Colocando role e atualizando o login